3 Jul 2013: Wouter
	- region-allocator has list of large allocations, so delete is in O(1).

28 Jun 2013: Matthijs
	- Update tmp serial in xfr checking.
	- nsd.db 12% smaller, no nsec3 hash storage.  Also ups udb version
	  because of the format change.  printout udb write complete for
	  debug.

28 Jun 2013: Wouter
	- Fix warning in labellength 0 code.

27 Jun 2013: Matthijs
	- Better XFR checking, fallback to AXFR (if allowed) if three
	  malformed XFR packets have been seen.
	- zonec: Don't crash on domain names with label length 0.

25 Jun 2013: Matthijs
	- Rename --enable-eui-rrtypes to --enable-draft-rrtypes.

25 Jun 2013: Wouter
	- acx_nlnetlabs.m4 update, --disable-flto.

20 Jun 2013: Matthijs
	- Use IPV6 minimum MTU settings with TCP to reduce failures that
	  are caused by delays in learning working PMTU when communicating
	  through a tunnel.
	- Improved RRL logging: also print triggering query src addr and qtype
	  (thanks Klaus Darilion).
	- Merge some minor stuff from NSD3.2

18 Jun 2013: Matthijs
	- Add rrl-slip config option (thanks Stephane Bortzmeyer).
	- Add rrl-ipv{4,6}-prefix-length config option.
	- Bug #496: Support for EUI498 and EUI64 RR types.

14 Jun 2013: Wouter
	- Optimizations: -O3 if possible (user can override CFLAGS), udp
	  buffers are set to 1m by default (if socket options exist),
	  use recvmmsg and sendmmsg, or only recvmmsg, or recvfrom.

11 Jun 2013: Wouter
	- Fix memory leak in zone parser for txt record (since the large
	  number of txt subsections fix).
	- Fix zone parser allocations to be in db region.
	- nsd-mem prints advice

5 Jun 2013: Wouter
	- Fix segfault on repeated reconfigs, double free of zone apex name.

4 Jun 2013: Wouter
	- Remove duplicate zlfile variable from options structure.

30 May 2013: Wouter
	- Fix nsd-mem for printout of values above 4G.

16 May 2013: Wouter
	- Patch from Lukas Wunner that makes chroot more consistent.
	  Make all paths absolute with the chrootdir in front, or use